--- a/ilovehorror-master/main.css
+++ b/ilovehorror-master/main.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Noto Sans KR', sans-serif;
     padding: 0; 
     margin: 0; 
-    background: #505867 url("images/background.png") no-repeat;
+    background: #505867 url("ilovehorror-master/images/background.png") no-repeat;
     background-size: 100%;
 }
 
